attempting to fix alignment of demo videos

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
 
 .video-responsive {
     overflow: hidden;
-    padding-bottom: 56.25%;
+    padding-bottom: 56.23%;
     position: relative;
     height: 0;
 }
